unpackaged/main/default/objects/Survey__c/Survey__c.object-meta.xml
<CustomObject>
    <description>For use in delivering &amp; capturing customer feedback.  Form Assembly will be utilized on the front-end for the customer facing deliverable.</description>
    <label>Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>