unpackaged/main/default/objects/Survey__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master/Detail to the Account object to relate the Customer/Member to this survey

{This filter has been disabled}</description>
    <label>Account</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>This error is from the Survey object as an Account filter.</errorMessage>
        <filterItems>
            <field>Account.RecordType.Id</field>
            <operation>equals</operation>
            <value>012j0000000m65b, 012j00000000Ixx, 0120a00000115yBAAQ</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>