unpackaged/main/default/objects/Survey__c/fields/Applied_for_Other_Loans__c.field-meta.xml
<CustomField>
    <fullName>Applied_for_Other_Loans__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I have applied for other loans (Check = True)</description>
    <inlineHelpText>I have applied for other loans (Check = True)</inlineHelpText>
    <label>Applied for Other Loans</label>
    <type>Checkbox</type>
</CustomField>