unpackaged/main/default/objects/Survey__c/fields/Attend_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Attend_Webinar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I would like to attend a webinar (Check = True)</description>
    <inlineHelpText>I would like to attend a webinar (Check = True)</inlineHelpText>
    <label>Attend Webinar</label>
    <type>Checkbox</type>
</CustomField>