unpackaged/main/default/objects/Survey__c/fields/Booked_Trip_Elsewhere__c.field-meta.xml
<CustomField>
    <fullName>Booked_Trip_Elsewhere__c</fullName>
    <description>How/where did the customer book, if they booked somewhere else?</description>
    <inlineHelpText>How/where did the customer book, if they booked somewhere else?</inlineHelpText>
    <label>Booked Trip Elsewhere</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other On-Line</fullName>
            </value>
            <value>
                <fullName>Direct Supplier</fullName>
            </value>
            <value>
                <fullName>Storefront Agency</fullName>
            </value>
            <value>
                <fullName>Another AAA Location</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>