unpackaged/main/default/objects/Survey__c/fields/Booked_Trip_Elsewhere_Other__c.field-meta.xml
<CustomField>
    <fullName>Booked_Trip_Elsewhere_Other__c</fullName>
    <label>Booked Trip Elsewhere Other</label>
    <length>50</length>
    <type>Text</type>
</CustomField>