unpackaged/main/default/objects/Survey__c/fields/Car_Care_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Car_Care_Consultant__c</fullName>
    <formula>Car_Care_Visit__r.Employee_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Car Care Consultant</label>
    <type>Text</type>
</CustomField>