unpackaged/main/default/objects/Survey__c/fields/Car_Care_Location__c.field-meta.xml
<CustomField>
    <fullName>Car_Care_Location__c</fullName>
    <label>AAA Location</label>
    <referenceTo>AAA_Location__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>