unpackaged/main/default/objects/Survey__c/fields/Car_Care_Region__c.field-meta.xml
<CustomField>
    <fullName>Car_Care_Region__c</fullName>
    <formula>Car_Care_Location__r.Car_Care_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Car Care Region</label>
    <type>Text</type>
</CustomField>