unpackaged/main/default/objects/Survey__c/fields/Car_Care_Visit__c.field-meta.xml
<CustomField>
    <fullName>Car_Care_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car Care Visit</label>
    <referenceTo>Car_Care_Visit__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>