unpackaged/main/default/objects/Survey__c/fields/Car_Care_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Car_Care_Visit_Date__c</fullName>
    <formula>Car_Care_Visit__r.Pay_Date__c</formula>
    <label>Car Care Visit Date</label>
    <type>Date</type>
</CustomField>