unpackaged/main/default/objects/Survey__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>General survey comments (250 char max)</description>
    <inlineHelpText>General survey comments (250 char max)</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>