unpackaged/main/default/objects/Survey__c/fields/Consignment_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Reduction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has battery consignment been reduced? (Check = Yes)</description>
    <inlineHelpText>Has battery consignment been reduced? (Check = Yes)</inlineHelpText>
    <label>Consignment Reduction</label>
    <type>Checkbox</type>
</CustomField>