unpackaged/main/default/objects/Survey__c/fields/Consignment_Reduction_Count__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Reduction_Count__c</fullName>
    <description>By how many units  has battery consignment been reduced?</description>
    <inlineHelpText>By how many units  has battery consignment been reduced?</inlineHelpText>
    <label>Consignment Reduction Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>