unpackaged/main/default/objects/Survey__c/fields/Current_Dispatcher_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Dispatcher_Count__c</fullName>
    <description>How many dispatchers currently?</description>
    <inlineHelpText>How many dispatchers currently?</inlineHelpText>
    <label>Current Dispatcher Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>