unpackaged/main/default/objects/Survey__c/fields/Current_Technician_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Technician_Count__c</fullName>
    <description>How many Technicians currently?</description>
    <inlineHelpText>How many Technicians currently?</inlineHelpText>
    <label>Current Technician Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>