unpackaged/main/default/objects/Survey__c/fields/Current_Vehicle_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Vehicle_Count__c</fullName>
    <label>Current Vehicle Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>