unpackaged/main/default/objects/Survey__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <label>Customer Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>