unpackaged/main/default/objects/Survey__c/fields/Days_From_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Send_Date__c</fullName>
    <formula>DAY(DATEVALUE(Survey_Completed_Date__c)) - DAY(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days From Send Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>