unpackaged/main/default/objects/Survey__c/fields/Detractor__c.field-meta.xml
<CustomField>
    <fullName>Detractor__c</fullName>
    <formula>IF( How_Likely_to_Recommend__c &lt; 7, 1, 0)</formula>
    <label>Detractor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>