unpackaged/main/default/objects/Survey__c/fields/ERS_Area__c.field-meta.xml
<CustomField>
    <fullName>ERS_Area__c</fullName>
    <formula>TEXT(ERS_Provider__r.ERS_Towing_Area__c)</formula>
    <label>ERS Area</label>
    <type>Text</type>
</CustomField>