unpackaged/main/default/objects/Survey__c/fields/ERS_Call_Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>ERS_Call_Cleared_Date__c</fullName>
    <formula>DATEVALUE(ERS_Event__r.ACG_Call_Cleared__c)</formula>
    <label>ERS Call Cleared Date</label>
    <type>Date</type>
</CustomField>