unpackaged/main/default/objects/Survey__c/fields/ERS_Event__c.field-meta.xml
<CustomField>
    <fullName>ERS_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERS_Event</label>
    <referenceTo>ACG_ERS_Event__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>