unpackaged/main/default/objects/Survey__c/fields/ERS_Provider__c.field-meta.xml
<CustomField>
    <fullName>ERS_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERS Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surveys (ERS Provider)</relationshipLabel>
    <relationshipName>Surveys1</relationshipName>
    <type>Lookup</type>
</CustomField>