unpackaged/main/default/objects/Survey__c/fields/Exclude_from_NPS__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_NPS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this survey will be excluded from Insurance Agent&#39;s personal NPS Score.</description>
    <inlineHelpText>When checked, this survey will be excluded from Insurance Agent&#39;s personal NPS Score. Can only be checked through an approval process.</inlineHelpText>
    <label>Exclude from NPS</label>
    <type>Checkbox</type>
</CustomField>