unpackaged/main/default/objects/Survey__c/fields/Fins_Survey_ID__c.field-meta.xml
<CustomField>
    <fullName>Fins_Survey_ID__c</fullName>
    <description>Customer will provide this field during submission via FormAssembly</description>
    <inlineHelpText>Customer will provide this field during submission via FormAssembly</inlineHelpText>
    <label>Fins Survey ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>