unpackaged/main/default/objects/Survey__c/fields/Go_Article_Length_Preference__c.field-meta.xml
<CustomField>
    <fullName>Go_Article_Length_Preference__c</fullName>
    <description>Do you prefer long articles or short articles?</description>
    <inlineHelpText>Do you prefer long articles or short articles?</inlineHelpText>
    <label>Article Length Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Long</fullName>
            </value>
            <value>
                <fullName>Short</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>