unpackaged/main/default/objects/Survey__c/fields/Go_Contacted_AAA_After_Reading__c.field-meta.xml
<CustomField>
    <fullName>Go_Contacted_AAA_After_Reading__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In the last 12 months, have you contacted AAA regarding services as a result of reading Go Magazine?</description>
    <inlineHelpText>In the last 12 months, have you contacted AAA regarding services as a result of reading Go Magazine?</inlineHelpText>
    <label>Contacted AAA After Reading</label>
    <type>Checkbox</type>
</CustomField>