unpackaged/main/default/objects/Survey__c/fields/Go_Cover_Photography_Preference__c.field-meta.xml
<CustomField>
    <fullName>Go_Cover_Photography_Preference__c</fullName>
    <description>What types of cover photography do you prefer?</description>
    <inlineHelpText>What types of cover photography do you prefer?</inlineHelpText>
    <label>Cover Photography Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>