unpackaged/main/default/objects/Survey__c/fields/Go_Ease_of_Reading__c.field-meta.xml
<CustomField>
    <fullName>Go_Ease_of_Reading__c</fullName>
    <description>Do you find the magazine easy or difficult to read?</description>
    <inlineHelpText>Do you find the magazine easy or difficult to read?</inlineHelpText>
    <label>Ease of Reading</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easy</fullName>
            </value>
            <value>
                <fullName>Difficult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>