unpackaged/main/default/objects/Survey__c/fields/Go_Ease_of_Reading_Comments__c.field-meta.xml
<CustomField>
    <fullName>Go_Ease_of_Reading_Comments__c</fullName>
    <description>Please tell us more about the ease of reading the magazine.</description>
    <inlineHelpText>Please tell us more about the ease of reading the magazine.</inlineHelpText>
    <label>Ease of Reading Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>