unpackaged/main/default/objects/Survey__c/fields/Go_Interested_in_Auto_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Go_Interested_in_Auto_Maintenance__c</fullName>
    <description>On a scale of 1-10, with 1 being most likely, how interested are you in reading about auto maintenance in future issues?</description>
    <inlineHelpText>On a scale of 1-10, with 1 being most likely, how interested are you in reading about auto maintenance in future issues?</inlineHelpText>
    <label>Interested in Auto Maintenance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>