unpackaged/main/default/objects/Survey__c/fields/Go_Magazine_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Go_Magazine_Satisfaction__c</fullName>
    <description>How satisfied are you with Go Magazine overall?</description>
    <inlineHelpText>How satisfied are you with Go Magazine overall?</inlineHelpText>
    <label>Go Magazine Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not at all satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Very satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>