unpackaged/main/default/objects/Survey__c/fields/Go_Other_Actions_Taken__c.field-meta.xml
<CustomField>
    <fullName>Go_Other_Actions_Taken__c</fullName>
    <description>Please let us know what other actions you have taken as a result of reading Go Magazine.</description>
    <inlineHelpText>Please let us know what other actions you have taken as a result of reading Go Magazine.</inlineHelpText>
    <label>Other Actions Taken</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>