unpackaged/main/default/objects/Survey__c/fields/Go_Other_Article_Prefences__c.field-meta.xml
<CustomField>
    <fullName>Go_Other_Article_Prefences__c</fullName>
    <description>What types of articles would you like to see more of?</description>
    <inlineHelpText>What types of articles would you like to see more of?</inlineHelpText>
    <label>Other Article Prefences</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>