unpackaged/main/default/objects/Survey__c/fields/Go_Reading_Format_Preference__c.field-meta.xml
<CustomField>
    <fullName>Go_Reading_Format_Preference__c</fullName>
    <description>In what format are you most likely to read Go Magazine?</description>
    <inlineHelpText>In what format are you most likely to read Go Magazine?</inlineHelpText>
    <label>Reading Format Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Tablet or eReader</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>