unpackaged/main/default/objects/Survey__c/fields/Go_References_Carolinas_Events__c.field-meta.xml
<CustomField>
    <fullName>Go_References_Carolinas_Events__c</fullName>
    <description>Do you refer to the Carolina events listed in each issue?</description>
    <inlineHelpText>Do you refer to the Carolina events listed in each issue?</inlineHelpText>
    <label>References Carolinas Events</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>