unpackaged/main/default/objects/Survey__c/fields/Go_Taken_Another_Action__c.field-meta.xml
<CustomField>
    <fullName>Go_Taken_Another_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In the last 12 months, have you taken any other action as a result of reading Go Magazine?</description>
    <inlineHelpText>In the last 12 months, have you taken any other action as a result of reading Go Magazine?</inlineHelpText>
    <label>Taken Another Action</label>
    <type>Checkbox</type>
</CustomField>