unpackaged/main/default/objects/Survey__c/fields/Go_Typical_Amount_Read__c.field-meta.xml
<CustomField>
    <fullName>Go_Typical_Amount_Read__c</fullName>
    <description>How thoroughly do you read a typical issue of Go Magazine?</description>
    <inlineHelpText>How thoroughly do you read a typical issue of Go Magazine?</inlineHelpText>
    <label>Typical Amount Read</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do not read</fullName>
            </value>
            <value>
                <fullName>Skim only</fullName>
            </value>
            <value>
                <fullName>Read ½</fullName>
            </value>
            <value>
                <fullName>Read all or almost all</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>