unpackaged/main/default/objects/Survey__c/fields/Go_Values_Member_Testimonials__c.field-meta.xml
<CustomField>
    <fullName>Go_Values_Member_Testimonials__c</fullName>
    <description>Do member testimonials about AAA services have value to you?</description>
    <inlineHelpText>Do member testimonials about AAA services have value to you?</inlineHelpText>
    <label>Values Member Testimonials</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>