unpackaged/main/default/objects/Survey__c/fields/Go_Visited_Web_Site__c.field-meta.xml
<CustomField>
    <fullName>Go_Visited_Web_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In the last 12 months, have you visited the Go Magazine web site (AAA.com) as a result of reading Go Magazine?</description>
    <inlineHelpText>In the last 12 months, have you visited the Go Magazine web site (AAA.com) as a result of reading Go Magazine?</inlineHelpText>
    <label>Visited Web Site</label>
    <type>Checkbox</type>
</CustomField>