unpackaged/main/default/objects/Survey__c/fields/Go_Visits_After_Reading__c.field-meta.xml
<CustomField>
    <fullName>Go_Visits_After_Reading__c</fullName>
    <description>Do you visit our web site for online content after reading an article?</description>
    <inlineHelpText>Do you visit our web site for online content after reading an article?</inlineHelpText>
    <label>Visits After Reading</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>