unpackaged/main/default/objects/Survey__c/fields/GoInterestedinHotelRestaurantReview__c.field-meta.xml
<CustomField>
    <fullName>GoInterestedinHotelRestaurantReview__c</fullName>
    <description>On a scale of 1-10, with 1 being most likely, how interested are you in reading about hotel &amp; restaurant reviews in future issues?</description>
    <inlineHelpText>On a scale of 1-10, with 1 being most likely, how interested are you in reading about hotel &amp; restaurant reviews in future issues?</inlineHelpText>
    <label>Interested in Hotel &amp; Restaurant Reviews</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>