unpackaged/main/default/objects/Survey__c/fields/GoInterestedinInternationalTravel__c.field-meta.xml
<CustomField>
    <fullName>GoInterestedinInternationalTravel__c</fullName>
    <description>On a scale of 1-10, with 1 being most likely, how interested are you in reading about international travel destinations in future issues?</description>
    <inlineHelpText>On a scale of 1-10, with 1 being most likely, how interested are you in reading about international travel destinations in future issues?</inlineHelpText>
    <label>Interested in International Travel</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>