unpackaged/main/default/objects/Survey__c/fields/GoTraveledtoAdvertisedDestination__c.field-meta.xml
<CustomField>
    <fullName>GoTraveledtoAdvertisedDestination__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In the last 12 months, have you traveled to a destination advertised or written about as a result of reading Go Magazine?</description>
    <inlineHelpText>In the last 12 months, have you traveled to a destination advertised or written about as a result of reading Go Magazine?</inlineHelpText>
    <label>Traveled to Advertised Destination</label>
    <type>Checkbox</type>
</CustomField>