unpackaged/main/default/objects/Survey__c/fields/Help_with_Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Help_with_Loan_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I would like help with the loan application (Check = True)</description>
    <inlineHelpText>I would like help with the loan application (Check = True)</inlineHelpText>
    <label>Help with Loan Application</label>
    <type>Checkbox</type>
</CustomField>