unpackaged/main/default/objects/Survey__c/fields/How_Likely_to_Recommend__c.field-meta.xml
<CustomField>
    <fullName>How_Likely_to_Recommend__c</fullName>
    <description>How likely are you to recommend AAA Carolinas to friends or family members?</description>
    <label>How Likely to Recommend?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>