unpackaged/main/default/objects/Survey__c/fields/How_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>How_Satisfied__c</fullName>
    <description>Overall, how satisfied were you with the repair facility/experience? Used only in Car Care.</description>
    <label>How Satisfied?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>