unpackaged/main/default/objects/Survey__c/fields/Insurance_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Distribution__c</fullName>
    <label>Insurance Distribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAOP</fullName>
            </value>
            <value>
                <fullName>Career Agents</fullName>
            </value>
            <value>
                <fullName>EIA</fullName>
            </value>
            <value>
                <fullName>IE</fullName>
            </value>
            <value>
                <fullName>Strategic Partners</fullName>
            </value>
            <value>
                <fullName>Service Agent</fullName>
            </value>
            <value>
                <fullName>Claims Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>