unpackaged/main/default/objects/Survey__c/fields/Insurance_NPS_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_NPS_Type__c</fullName>
    <description>Identifier for various insurance NPS types</description>
    <label>Insurance Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Career Agent</fullName>
            </value>
            <value>
                <fullName>External Agent</fullName>
            </value>
            <value>
                <fullName>Service Agent</fullName>
            </value>
            <value>
                <fullName>Claims Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>