unpackaged/main/default/objects/Survey__c/fields/Insurance_Status__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Status__c</fullName>
    <description>What is the current status of your insurance?</description>
    <inlineHelpText>What is the current status of your insurance?</inlineHelpText>
    <label>Insurance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Need Help</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>