unpackaged/main/default/objects/Survey__c/fields/Loan_Completed__c.field-meta.xml
<CustomField>
    <fullName>Loan_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I have completed the loan (Check = True)</description>
    <inlineHelpText>I have completed the loan (Check = True)</inlineHelpText>
    <label>Loan Completed</label>
    <type>Checkbox</type>
</CustomField>