unpackaged/main/default/objects/Survey__c/fields/Loan_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Completion_Date__c</fullName>
    <description>Date loan application was completed</description>
    <inlineHelpText>Date loan application was completed</inlineHelpText>
    <label>Loan Completion Date</label>
    <type>Date</type>
</CustomField>