unpackaged/main/default/objects/Survey__c/fields/Loan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Start_Date__c</fullName>
    <description>Date loan application was started</description>
    <inlineHelpText>Date loan application was started</inlineHelpText>
    <label>Loan Start Date</label>
    <type>Date</type>
</CustomField>