unpackaged/main/default/objects/Survey__c/fields/Loan_Started__c.field-meta.xml
<CustomField>
    <fullName>Loan_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I have started the Loan Process (Check = True)</description>
    <inlineHelpText>I have started the Loan Process (Check = True)</inlineHelpText>
    <label>Loan Started</label>
    <type>Checkbox</type>
</CustomField>