unpackaged/main/default/objects/Survey__c/fields/Manually_Entered__c.field-meta.xml
<CustomField>
    <fullName>Manually_Entered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was this survey entered in-house?</inlineHelpText>
    <label>Manually Entered</label>
    <type>Checkbox</type>
</CustomField>