unpackaged/main/default/objects/Survey__c/fields/Membership_NPS_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_NPS_Type__c</fullName>
    <label>Membership NPS Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Join</fullName>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>