unpackaged/main/default/objects/Survey__c/fields/Most_Pleasant__c.field-meta.xml
<CustomField>
    <fullName>Most_Pleasant__c</fullName>
    <label>Most Pleasant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Car_Care_Survey_Responses</valueSetName>
    </valueSet>
</CustomField>